<resources>
    <string name="app_name">CampusChat</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="welcome_msg">WELCOME TO CAMPUSCHAT!</string>
    <string name="main_enter_text">Enter any nickname</string>
    <string name="main_enter">ENTER</string>
    <string name="splash_continue">CONTINUE</string>

    <string name="add_post">ADD POST</string>
    <string name="comments">COMMENTS</string>
    <string name="cancel">CANCEL</string>
    <string name="send">SEND</string>
    <string name="message">Message</string>
    <string name="on_mind">What\'s on your mind?</string>

    <string name="add_text">ADD TEXT</string>
</resources>
